--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -158,7 +158,7 @@
     
     <div class="relative z-10 min-h-screen flex">
         <!-- Left Side - Welcome Section -->
-        <div class="hidden md:flex flex-1 items-center justify-center p-8 welcome-animation">
+        <div class="hidden lg:flex flex-1 items-center justify-center p-8 welcome-animation">
             <div class="max-w-md text-center">
                 <div class="brand-logo mb-8">
                     <div class="w-20 h-20 bg-gradient-to-r from-purple-400 to-pink-400 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-2xl">
